Fix spacing between hero image contact page and first h2

--- a/css/style.css
+++ b/css/style.css
@@ -297,6 +297,13 @@ input {
   #recommended-links a {
     font-size: smaller;
   }
+
+  /* contact page */
+
+  #contact-image {
+    margin-bottom: -180px;
+  }
+
 }
 
 @media screen and (max-width: 320px) {
